add responsiveness and improved design a bit

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,8 +2,9 @@
   font-family: 'Montserrat', sans-serif;
   /* background: url('/bg3.jpg'); */
 }
+
 .header{
-  box-shadow: 2px 2px 5px 5px;
+  box-shadow: 1px 1px 5px gray;
   position: fixed;
   top: 0;
   right: 0;
@@ -19,22 +20,22 @@
   margin: 50px;
 }
 .photo{
-  box-shadow: 5px 5px 5px 5px  ;
+  box-shadow: 1px 1px 5px gray;
   padding: 10px;
   margin: 10px;
 }
 .basic-details{
-  box-shadow: 5px 5px 5px 5px  ;
+  box-shadow: 1px 1px 5px gray;
   padding: 10px;
   margin: 20px;
 }
 .intro-container{
-  box-shadow: 2px 2px 2px 2px  ;
+  box-shadow: 1px 1px 5px gray;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
 }
 .resume-container{
-  box-shadow: 2px 2px 2px 2px  ;
+  box-shadow: 1px 1px 5px gray;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
   margin: 50px auto;
@@ -47,54 +48,54 @@
   margin: 30px auto;
 }
 .project-container{
-  
-  margin: 30px auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 50px;
+  box-shadow: 1px 1px 7px gray;
+  width: 100%;
+  margin-top: 20px;
+  padding: 20px;
 }
+
+.projects-container + .projects-container {
+  margin-top: 30px;
+}
+
 .project-image{
-  box-shadow: 2px 2px 2px 2px;
-  height: 350px;
-  width: 450px;
+  max-width: calc(100% - 40px);
 }
 .project-info{
   padding: 10px 0px;
-  box-shadow: 2px 2px 5px 5px;
-  width: 650px;
+  max-width: calc(100% - 40px);
   text-align: center;
-  height: 350px;
+  word-wrap: break-word;
 }
 .project-sub-info{
   text-align: left;
 }
 .container-acadachvs{
-  box-shadow: 2px 2px 5px 5px  ;
+  box-shadow: 1px 1px 5px gray;
   margin: 10px auto;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
 }
 .container-pos-of-res{
-  box-shadow: 2px 2px 5px 5px  ;
+  box-shadow: 1px 1px 5px gray;
   margin: 10px auto;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
 }
 .container-techachvs{
-  box-shadow: 2px 2px 5px 5px  ;
+  box-shadow: 1px 1px 5px gray;
   margin: 20px auto;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
 }
 .container-extracurr{
-  box-shadow: 2px 2px 5px 5px;
+  box-shadow: 1px 1px 5px gray;
   margin: 20px auto;
   padding: 10px;
   /* background: url('/bg2.jpg'); */
 }
 .container-contact-main{
-  box-shadow: 2px 2px 5px 5px;
+  box-shadow: 1px 1px 5px gray;
   padding: 20px;
   /* background: url('/bg2.jpg'); */
 }
@@ -114,7 +115,7 @@
 }
 
 .contact-form{
-  box-shadow: 2px 2px 5px 5px;
+  box-shadow: 1px 1px 5px gray;
   text-align: center;
   justify-content: center;
   align-items: center;
